MBL-1410: Paging3 sample for GraphQL endpoint. (#2045)