@@ -27,6 +27,7 @@ task ktlint(type: JavaExec, group: "verification") {
     mainClass.set("com.pinterest.ktlint.Main")
     args "src/**/*.kt"
     args "--reporter=plain", "--reporter=checkstyle,output="+outputFile
+    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
     ignoreExitValue true
     doLast {
         def exitValue = executionResult.get().exitValue
@@ -43,6 +44,7 @@ check.dependsOn 'checkstyle','ktlint'
 task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
+    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
     mainClass.set("com.pinterest.ktlint.Main")
     args "-F", "src/**/*.kt"
     ignoreExitValue true
